Update 1. Introduction to EUS.md

--- a/Support/Country Survey Details/IND/EUS/1. Introduction to EUS.md
+++ b/Support/Country Survey Details/IND/EUS/1. Introduction to EUS.md
@@ -37,6 +37,20 @@ The official reports detail results jointly by sex, sector (urban or rural), and
 
 ## Other noteworthy aspects
 
+### Difference from reported population
+Sample sizes and expanded population (that is the total population estimated using the weights) are compared to the reported data by the Ministry of Statistics and Programme Implementation (MOSPI) for all years. They match exactly the published numbers except for 1999. 
+
+The table below shows the difference between published data and the data in the GLD harmonization. Note that MOSPI reports expanded population only to the nearest hundred, rounding by the next number (i.e., 427,149 would be rounded to 1, not to 427,100, not 427,200).
+
+| Unit			| GLD Data	| Published Data	|
+| :------:			| :------:		| :------:			|
+| Sample size – Rural	| 509,778	| 509,779		|
+|Expanded pop – Rural	| 686,881,988	| 686,880,900		|
+|Expanded pop – Rural	| 309,233	| 309,234		|
+|Expanded pop – Urban	| 234,107,489	| 234,107,000		|
+
+The differences are a single individual in each of the rural and the urban sample, in the hundreds in the case of expanded population - for a country of about a billion people at the time (1999). The harmonization team has tried to identify and correct this difference but failed to locate it. The differences are believed to be too small to impact the validity of any conclusions drawn from the data in a significant way. The inability to match precisely published numbers is nonetheless to note.
+
 ### Coding of industry and occupation codes
 The EUS codes occupation based on the Indian National Occupation classification (NOC) and industry based on the National Industry classification. Different survey editions use different iterations of the NOC and NIC, which in turn lead to different mappings to the International Standard Classification of Occupations (ISCO) and International Standard Industrial Classification (ISIC). 
 The details on the process of creating the correspondence between national and international classifications [are covered here in a separate document](/Support/Country%20Survey%20Details/IND/EUS/Correspondence_National_International_Classifications.md). The table below shows the overview of the underlying version of the national classification and what version of the international they have been matched to.
