Update 1. Introduction to EUS.md

--- a/Support/Country Survey Details/IND/EUS/1. Introduction to EUS.md
+++ b/Support/Country Survey Details/IND/EUS/1. Introduction to EUS.md
@@ -4,7 +4,7 @@
 
 The EUS is the national comprehensive labour force survey, carried out by the [National Sample Survey](http://www.mospi.nic.in/national-sample-survey-nss). It was implemented 10 times from 1983 to 2011. All surveys ran from July of the first year to June of the following (e.g., July 1983 to June 1984) except for the [60th round](http://microdata.gov.in/nada43/index.php/catalog/106) which ran from January 2004 to June 2004. 
 
-## What does the [CCC] [survey Acronym] cover?
+## What does the EUS cover?
 
 The EUS was implemented 10 times between 1983covers household characteristics, individual demographic and education characteristics of respondents, as well as labour market information both over the past 12 months and over the 7 days prior to interview. Additionally, different iterations of the EUS have added modules on migration, household expenditure, and recent changes in employment. For example, only the 1983, 1987, 1999, and 2007 surveys contain a migration module.
 The years 1987 to 2011 have been harmonized to GLD standard (1983 is in the works). The aforementioned 60th round from January to June 2004 was not harmonized as the 61st round took place from July 2004 to June 2005 and is in line with the other surveys and covers the same year. 
@@ -132,3 +132,18 @@ There are also cases where the given CWS is not equal to what would have been de
 ![Manual](/Support/Country%20Survey%20Details/IND/EUS/utilities/browse_2_current_week.PNG)
 
 In both cases where the determined CWS differs from the given CWS, the recommended approach is to accept the current weekly activity as the truth despite reneging from the determination rules. The logic behind this is that the current weekly activity is mapped to the industry and occupation variables that would not be compatible should the harmonizer use the determination procedure to tag the CWS. Meanwhile, the determined CWS would then be assigned to the secondary activity. Thus, in this case, the primary activity is “51” while the secondary activity is “11”.
+
+
+### Difference in coding unemployment between the recall periods
+
+The EUS contains information on the labour status (employed, unemployed, or out of the labour force) based on the 7-day and the 12-month recall periods, as stated above. 
+There is a further nuance to note in the treatment of the unemployed since the questionnaire is more fine-grained over the 7-day period than over the 12-month period.
+For the 12-month period, the code `81` denotes a person who *did not work but was seeking and/or available for work*. Technically, the unemployed are those who are both seeking and available to work. Here it is not possible to differentiate and all individuals with code `81` are defined as unemployed.
+For the 7-day period there are two different codes. Code `81` denotes here a person who *sought work*, while code `82` describes an individual who *did not seek but was available for work*. Thus, in this case we can discriminate.
+Over the 7-day recall only individuals with code `81` are defined as unemployed, those with code `82` are deemed not in the labour force (`lstatus = 3`). To differentiate them nonetheless, people with code `82` are coded as potential labour force (`potential_lf = 1`) while the other individuals not in the labour force are also not potentially part of it (`potential_lf = 0`).
+To compare both concepts, it is advised to create a new variable in the following way:
+```
+gen lstatus_compare = lstatus
+replace lstatus_compare = 2 if potential_lf == 1
+```
+Then `lstatus_compare` can be safely compared to `lstatus_year`.
