--- a/Support/Country Survey Details/ZAF/QLFS/1. Introduction to QLFS.md
+++ b/Support/Country Survey Details/ZAF/QLFS/1. Introduction to QLFS.md
@@ -8,35 +8,21 @@ The South African Quarterly Labour Force Survey (QLFS) is a household-based samp
 
 The ZAF QLFS mainly covers information on demographic details, including age, sex, marital status, location, and education (both academic and vocational), labour market activities, as well as time use and activities over the previous 7 days. Information collected by the ZAF QLFS remains consistent over years. The years and sample size of QLFS harmonized for GLD are:
 
-+---------------------+----------------------+----------------------+
-| Year                | \# of Households     | \# of Individuals    |
-+:===================:+:====================:+:====================:+
-| 2008                | 49,221               | 183,384              |
-+---------------------+----------------------+----------------------+
-| 2009                | 47,334               | 173,412              |
-+---------------------+----------------------+----------------------+
-| 2010                | 44,612               | 161,573              |
-+---------------------+----------------------+----------------------+
-| 2011                | 45,044               | 160,350              |
-+---------------------+----------------------+----------------------+
-| 2012                | 45,978               | 161,299              |
-+---------------------+----------------------+----------------------+
-| 2013                | 46,440               | 166,387              |
-+---------------------+----------------------+----------------------+
-| 2014                | 45,396               | 163,995              |
-+---------------------+----------------------+----------------------+
-| 2015                | 40,778               | 139,961              |
-+---------------------+----------------------+----------------------+
-| 2016                | 39,861               | 133,402              |
-+---------------------+----------------------+----------------------+
-| 2017                | 39,418               | 132,713              |
-+---------------------+----------------------+----------------------+
-| 2018                | 39,084               | 131,374              |
-+---------------------+----------------------+----------------------+
-| 2019                | 38,611               | 129,184              |
-+---------------------+----------------------+----------------------+
-| 2020                | 20,865               | 72,396               |
-+---------------------+----------------------+----------------------+
+| Year	| # of Households	| # of Individuals	|
+| :------:	| :-------:		| :-------:	 	|
+| 2008  | 49,221        | 183,384        |
+| 2009  | 47,334        | 173,412        |
+| 2010  | 44,612        | 161,573        |
+| 2011  | 45,044        | 160,350        |
+| 2012  | 45,978        | 161,299        |
+| 2013  | 46,440        | 166,387        |
+| 2014  | 45,396        | 163,995        |
+| 2015  | 40,778        | 139,961        |
+| 2016  | 39,861        | 133,402        |
+| 2017  | 39,418        | 132,713        |
+| 2018  | 39,084        | 131,374        |
+| 2019  | 38,611        | 129,184        |
+| 2020  | 20,865        | 72,396         |
 
 ## Where can the data be found?
 
@@ -62,9 +48,9 @@ The official reports detail results by gender, sector (urban formal, urban infor
 
 Two things to be noted regarding geographic significance level:
 
-1)  South Africa has 9 provinces which are currently divided into 52 districts. The 52 districts are further categorized into two types --- 44 non-metropolitan and 8 large city areas called metros. In the survey, the way of grouping these metro and non-metro areas changes before and after 2014. See more details below in the *"*[Changes in sub-national level categorization]*"* section.
+1)  South Africa has 9 provinces which are currently divided into 52 districts. The 52 districts are further categorized into two types --- 44 non-metropolitan and 8 large city areas called metros. In the survey, the way of grouping these metro and non-metro areas changes before and after 2014. See more details below in the *"*[Changes in sub-national level categorization](#Changes-in-sub-national-level-categorization)*"* section.
 
-2)  The original categorization of sector varies across years. Principally, the QLFS uses "Urban formal", "Urban informal", "Tribal areas", and "Farms and mining areas". But in no documentation does it clarify the categories in terms of urban/rural classification. See more details including the decision rule for harmonization below in the *"*[Coding of sector]*"* section.
+2)  The original categorization of sector varies across years. Principally, the QLFS uses "Urban formal", "Urban informal", "Tribal areas", and "Farms and mining areas". But in no documentation does it clarify the categories in terms of urban/rural classification. See more details including the decision rule for harmonization below in the *"*[Coding of sector](#Coding-of-sector)*"* section.
 
 ## Other noteworthy aspects
 
@@ -92,35 +78,22 @@ The decision rule we created to assign household heads in cases where heads are 
 
 Consequently, the dropped observations shown in the table are all because there is no adult member or multiple same-age male (or female) members exist.
 
-+----------+-----------------+-----------------------+----------+---------------------+--------------------------------+---------------------------------------+
-| Year     | Raw sample size | Processed sample size | \# Drops | Reported population | Estimated population(raw data) | Estimated population (processed data) |
-+:========:+=================+=======================+==========+=====================+================================+=======================================+
-| **2008** | 375,918         | 375,856               | 62       | 49,562,000          | 49,373,878                     | 49,365,385                            |
-+----------+-----------------+-----------------------+----------+---------------------+--------------------------------+---------------------------------------+
-| **2009** | 359,465         | 359,423               | 42       | 50,224,000          | 50,044,374                     | 50,040,072                            |
-+----------+-----------------+-----------------------+----------+---------------------+--------------------------------+---------------------------------------+
-| **2010** | 342,466         | 342,445               | 21       | 50,896,000          | 50,896,271                     | 50,894,161                            |
-+----------+-----------------+-----------------------+----------+---------------------+--------------------------------+---------------------------------------+
-| **2011** | 333,939         | 333,780               | 159      | 51,580,000          | 51,580,122                     | 51,562,353                            |
-+----------+-----------------+-----------------------+----------+---------------------+--------------------------------+---------------------------------------+
-| **2012** | 339,858         | 339,697               | 161      | 52,275,000          | 52,275,309                     | 52,249,700                            |
-+----------+-----------------+-----------------------+----------+---------------------+--------------------------------+---------------------------------------+
-| **2013** | 346,687         | 346,511               | 176      | 52,982,000          | 52,982,369                     | 52,956,174                            |
-+----------+-----------------+-----------------------+----------+---------------------+--------------------------------+---------------------------------------+
-| **2014** | 341,320         | 341,186               | 134      | 53,701,000          | 53,701,488                     | 53,688,613                            |
-+----------+-----------------+-----------------------+----------+---------------------+--------------------------------+---------------------------------------+
-| **2015** | 286,782         | 286,709               | 73       | 54,433,000          | 54,432,731                     | 54,420,645                            |
-+----------+-----------------+-----------------------+----------+---------------------+--------------------------------+---------------------------------------+
-| **2016** | 275,306         | 275,202               | 104      | 55,174,000          | 55,173,509                     | 55,154,645                            |
-+----------+-----------------+-----------------------+----------+---------------------+--------------------------------+---------------------------------------+
-| **2017** | 276,876         | 276,773               | 103      | 55,906,000          | 55,905,546                     | 55,891,484                            |
-+----------+-----------------+-----------------------+----------+---------------------+--------------------------------+---------------------------------------+
-| **2018** | 275,382         | 275,247               | 135      | 56,623,000          | 56,622,824                     | 56,600,492                            |
-+----------+-----------------+-----------------------+----------+---------------------+--------------------------------+---------------------------------------+
-| **2019** | 270,358         | 270,215               | 143      | 57,342,000          | 57,341,699                     | 57,314,175                            |
-+----------+-----------------+-----------------------+----------+---------------------+--------------------------------+---------------------------------------+
-| **2020** | 209,917         | 209,890               | 27       | N/A                 | 58,064,779                     | 58,060,431                            |
-+----------+-----------------+-----------------------+----------+---------------------+--------------------------------+---------------------------------------+
+
+|   Year   | Raw sample size | Processed sample size | # Drops | Reported population | Estimated population(raw data) | Estimated population (processed data) |
+| :------: | :-------------: | :-------------------: | :-----: | :-----------------: | :----------------------------: | :-----------------------------------: |
+| **2008** | 375,918         | 375,856               | 62      | 49,562,000          | 49,373,878                     | 49,365,385                            |
+| **2009** | 359,465         | 359,423               | 42      | 50,224,000          | 50,044,374                     | 50,040,072                            |
+| **2010** | 342,466         | 342,445               | 21      | 50,896,000          | 50,896,271                     | 50,894,161                            |
+| **2011** | 333,939         | 333,780               | 159     | 51,580,000          | 51,580,122                     | 51,562,353                            |
+| **2012** | 339,858         | 339,697               | 161     | 52,275,000          | 52,275,309                     | 52,249,700                            |
+| **2013** | 346,687         | 346,511               | 176     | 52,982,000          | 52,982,369                     | 52,956,174                            |
+| **2014** | 341,320         | 341,186               | 134     | 53,701,000          | 53,701,488                     | 53,688,613                            |
+| **2015** | 286,782         | 286,709               | 73      | 54,433,000          | 54,432,731                     | 54,420,645                            |
+| **2016** | 275,306         | 275,202               | 104     | 55,174,000          | 55,173,509                     | 55,154,645                            |
+| **2017** | 276,876         | 276,773               | 103     | 55,906,000          | 55,905,546                     | 55,891,484                            |
+| **2018** | 275,382         | 275,247               | 135     | 56,623,000          | 56,622,824                     | 56,600,492                            |
+| **2019** | 270,358         | 270,215               | 143     | 57,342,000          | 57,341,699                     | 57,314,175                            |
+| **2020** | 209,917         | 209,890               | 27      | N/A                 | 58,064,779                     | 58,060,431                            |
 
 ### Changes in sub-national level categorization
 
@@ -154,105 +127,21 @@ The original variable `Geo_type` in the QLFS is not an urban-or-rural binary var
 
 We referred to the published statistics of urban population (% of total population) of South Africa from [World Bank Open Data](https://data.worldbank.org/indicator/SP.URB.TOTL.IN.ZS?end=2020&locations=ZA&start=2007) to decide the way of sector's harmonization. The original categories are re-grouped in such way that each year's result match World Bank's statistics correspondingly as close as possible.
 
-+:-------------:+:--------------------------:+:---------------------:+
-| **Year**      | **Original geo-type code** | **Re-categorization** |
-+---------------+----------------------------+-----------------------+
-| 2008          | 1=Urban formal             | (1 2)=urban           |
-|               |                            |                       |
-|               | 2=Urban informal           | (4 5)=rural           |
-|               |                            |                       |
-|               | 4=Tribal areas             |                       |
-|               |                            |                       |
-|               | 5=Rural formal             |                       |
-+---------------+----------------------------+-----------------------+
-| 2009          | 1=Urban formal             | (1 2)=urban           |
-|               |                            |                       |
-|               | 2=Urban informal           | (4 5)=rural           |
-|               |                            |                       |
-|               | 4=Tribal areas             |                       |
-|               |                            |                       |
-|               | 5=Rural formal             |                       |
-+---------------+----------------------------+-----------------------+
-| 2010          | 1=Urban formal             | (1 2)=urban           |
-|               |                            |                       |
-|               | 2=Urban informal           | (4 5)=rural           |
-|               |                            |                       |
-|               | 4=Tribal areas             |                       |
-|               |                            |                       |
-|               | 5=Rural formal             |                       |
-+---------------+----------------------------+-----------------------+
-| 2011          | 1=Urban formal             | (1 2)=urban           |
-|               |                            |                       |
-|               | 2=Urban informal           | (4 5)=rural           |
-|               |                            |                       |
-|               | 4=Tribal areas             |                       |
-|               |                            |                       |
-|               | 5=Rural formal             |                       |
-+---------------+----------------------------+-----------------------+
-| 2012          | 1=Urban formal             | (1 2)=urban           |
-|               |                            |                       |
-|               | 2=Urban informal           | (4 5)=rural           |
-|               |                            |                       |
-|               | 4=Tribal areas             |                       |
-|               |                            |                       |
-|               | 5=Rural formal             |                       |
-+---------------+----------------------------+-----------------------+
-| 2013          | 1=Urban formal             | (1 2)=urban           |
-|               |                            |                       |
-|               | 2=Urban informal           | (4 5)=rural           |
-|               |                            |                       |
-|               | 4=Tribal areas             |                       |
-|               |                            |                       |
-|               | 5=Rural formal             |                       |
-+---------------+----------------------------+-----------------------+
-| 2014          | 1=Urban formal             | (1 2)=urban           |
-|               |                            |                       |
-|               | 2=Urban informal           | (4 5)=rural           |
-|               |                            |                       |
-|               | 4=Tribal areas             |                       |
-|               |                            |                       |
-|               | 5=Rural formal             |                       |
-+---------------+----------------------------+-----------------------+
-| 2015          | 1=Urban formal             | 1=urban               |
-|               |                            |                       |
-|               | 2=Urban informal           | (2 3 4)=rural         |
-|               |                            |                       |
-|               | 3=Tribal areas             |                       |
-|               |                            |                       |
-|               | 4=Rural formal             |                       |
-+---------------+----------------------------+-----------------------+
-| 2016          | 1=urban                    | 1=urban               |
-|               |                            |                       |
-|               | 2=traditional              | (2 3 4)=rural         |
-|               |                            |                       |
-|               | 3=farms                    |                       |
-|               |                            |                       |
-|               | 4=mining areas             |                       |
-+---------------+----------------------------+-----------------------+
-| 2017          | 1=urban                    | 1=urban               |
-|               |                            |                       |
-|               | 2=traditional              | (2 3)=rural           |
-|               |                            |                       |
-|               | 3=farms/mining areas       |                       |
-+---------------+----------------------------+-----------------------+
-| 2018          | 1=urban                    | 1=urban               |
-|               |                            |                       |
-|               | 2=traditional              | (2 3)=rural           |
-|               |                            |                       |
-|               | 3=farms/mining areas       |                       |
-+---------------+----------------------------+-----------------------+
-| 2019          | 1=urban                    | 1=urban               |
-|               |                            |                       |
-|               | 2=traditional              | (2 3)=rural           |
-|               |                            |                       |
-|               | 3=farms/mining areas       |                       |
-+---------------+----------------------------+-----------------------+
-| 2020          | 1=urban                    | 1=urban               |
-|               |                            |                       |
-|               | 2=traditional              | (2 3)=rural           |
-|               |                            |                       |
-|               | 3=farms/mining areas       |                       |
-+---------------+----------------------------+-----------------------+
+|**Year**|                     **Original geo-type code**                    | **Re-categorization**         | 
+|:---:|:--------------------------------------------------------------------:|:-----------------------------:|
+|2008| 1=Urban formal 2=Urban informal   4=Tribal areas 5=Rural formal       |     (1 2)=urban (4 5)=rural   |
+|2009| 1=Urban formal 2=Urban informal   4=Tribal areas 5=Rural formal       |     (1 2)=urban (4 5)=rural   |
+|2010| 1=Urban formal 2=Urban informal   4=Tribal areas 5=Rural formal       |     (1 2)=urban (4 5)=rural   |
+|2011| 1=Urban formal 2=Urban informal   4=Tribal areas 5=Rural formal       |     (1 2)=urban (4 5)=rural   |
+|2012| 1=Urban formal 2=Urban informal   4=Tribal areas 5=Rural formal       |     (1 2)=urban (4 5)=rural   |
+|2013| 1=Urban formal 2=Urban informal   4=Tribal areas 5=Rural formal       |     (1 2)=urban (4 5)=rural   |
+|2014| 1=Urban formal 2=Urban informal   4=Tribal areas 5=Rural formal       |     (1 2)=urban (4 5)=rural   |
+|2015| 1=Urban formal 2=Urban informal   4=Tribal areas 4=Rural formal       |     1=urban (2 3 4)=rural     |
+|2016| 1=Urban 2=Traditional 3=Farms  4=Mining areas                         |     1=urban (2 3 4)=rural     |
+|2017| 1=Urban 2=Traditional 3=Farms/mining areas                            |     1=urban   (2 3)=rural     |
+|2018| 1=Urban 2=Traditional 3=Farms/mining areas                            |     1=urban   (2 3)=rural     |
+|2019| 1=Urban 2=Traditional 3=Farms/mining areas                            |     1=urban   (2 3)=rural     |
+|2020| 1=Urban 2=Traditional 3=Farms/mining areas                            |     1=urban   (2 3)=rural     |
 
 ![Urbanization statistics of South Africa, 2008-2020.](utilities/ZAF_urbanization_WBopenData.png)
 
