Update 1. Introduction to QLFS.md

--- a/Support/Country Survey Details/ZAF/QLFS/1. Introduction to QLFS.md
+++ b/Support/Country Survey Details/ZAF/QLFS/1. Introduction to QLFS.md
@@ -121,7 +121,7 @@ South Africa has 6 metro cities before 2011 and the country added 2 metros, *Buf
 |       16        |          \-          |  *Mpumalanga, Non-Metro*   |
 |       17        |          \-          |    *Limpopo, Non-Metro*    |
 
-### Coding of sector {data-link="Changes in sub-national level categorization"}
+### Coding of sector 
 
 The original variable `Geo_type` in the QLFS is not an urban-or-rural binary variable. Moreover, it varies over years. As shown in the table below, from 2008 to 2015, `Geo_type` contains urban formal, urban informal, tribal areas, and rural formal. But since 2016, it has urban, traditional, and farm/mining areas.
 
