--- a/Support/Country Survey Details/MEX/ENOE/1. Introduction to ENOE.md
+++ b/Support/Country Survey Details/MEX/ENOE/1. Introduction to ENOE.md
@@ -1,6 +1,13 @@
 Introduction to the Mexican Labour Force Survey (ENOE)
 ================
 
+- [What is the MEX ENOE?](#what-is-the-mex-enoe)
+- [What does the MEX ENOE cover?](#what-does-the-mex-enoe-cover)
+- [Where can the data be found?](#where-can-the-data-be-found)
+- [What is the sampling procedure?](#what-is-the-sampling-procedure)
+- [What is the geographic significance level?](#what-is-the-geographic-significance-level)
+- [Other noteworthy aspects](#other-noteworthy-aspects)
+
 ## What is the MEX ENOE?
 
 The Mexican Labour Force and Unemployment Survey (ENOE) is the Mexican Labour Force Survey run as part of Mexico’s National Surveys series from 2005 to 2020.
@@ -112,18 +119,33 @@ the basic questionnaire versions.
 | Questions about situation after losing a job and the length of unemployment or job inactivity. | Questions about migration and additional labor opportunities (second job).                                                       |
 |                                                                                                | Questions on financial, social and economic support such as syndicate enrollment, public social welfare benefits, and insurance. |
 
-### ISIC mapping (MEX)
+### Coding of industry and occupation codes
 
-The Mexican INEGI codes industry in the ENOE based on the Mexican version of the North American Industry Classification System (NAICS). This system is very different from the international ISIC format. To map from NAICS to ISIC (versions 3.1 and 4), and to code `industrycat_isic`, a special procedure is needed. This process is detailed in a [separate document, available here](../Country%20Survey%20Details/MEX/ENOE/Correspondence_NAICS_ISIC.md).
+The ENOE codes occupation based on the "Mexican Classification of Occupations" (Clasificación Mexicana de Ocupaciones - CMO) from 2005 to 2012 and from 2013 to 2020 on the "National System of Classification of Occupations" (Sistema Nacional de Clasificación de Ocupaciones - SINCO). These are mapped to ISCO-08. 
 
-— [Author made. based on ENOE
-Questionnaires](https://www.inegi.org.mx/programas/enoe/15ymas/)
+On the industry side, ENOE codifies industry over the years based on four different versions of the North American System of Industrial Classification (Sistema de Clasificación Industrial de América del Norte - SCIAN), namely the 2002, 2007, 2013, and 2018 versions. The first is mapped to ISIC-3.1, while the others are mapped to ISIC-4. 
 
-After analyzing the questionnaire versions, the team concluded that using 
-quarterly questionnaires data reduces seasonality because INEGI collected quarter one 
-data across the years using the extended version. The only exception 
-is quarter one data for years 2007 and 2008.
+The table below provides an overview of the different versions underlying the survey as well as what version they have been mapped to. The precise details of how the mapping was done is covered [here in a separate document on occupations](Correspondence_occup_ISCO.md) as well as [here on industry classification](Correspondence_National_International_Classifications.md).
 
-The INEGI compiled comprehensive information on the questionnaires. For instance, methodology of the process for the most [recent version](https://www.inegi.org.mx/app/biblioteca/ficha.html?upc=702825190613), and [previous versions](https://www.inegi.org.mx/app/biblioteca/ficha.html?upc=702825190613). Similarly, the user can use the [interviewer manuals](https://www.inegi.org.mx/app/biblioteca/ficha.html?upc=702825006555) to follow the perspective of the surveyors in [the basic](https://www.inegi.org.mx/app/biblioteca/ficha.html?upc=702825006554) and other versions. 
 
-Further information or questions about the microdata in this webpage can be directed to World Bank Jobs Group.
+| Year of survey	| National occup version	| ISCO version	| National industry version	| ISIC version	|
+| :----:		| :----:			| :----:	| :----:			| :----:	|
+| 2005			| CMO 				| ISCO-08	| SCIAN 2002			| ISIC-3.1	|
+| 2006			| CMO				| ISCO-08	| SCIAN 2002			| ISIC-3.1	|
+| 2007			| CMO				| ISCO-08	| SCIAN 2002			| ISIC-3.1	|
+| 2008			| CMO				| ISCO-08	| SCIAN 2007			| ISIC-4	|
+| 2009			| CMO				| ISCO-08	| SCIAN 2007			| ISIC-4	|
+| 2010			| CMO				| ISCO-08	| SCIAN 2007			| ISIC-4	|
+| 2011			| CMO				| ISCO-08	| SCIAN 2007			| ISIC-4	|
+| 2012			| CMO				| ISCO-08	| SCIAN 2007			| ISIC-4	|
+| 2013			| SINCO 2011			| ISCO-08	| SCIAN 2007			| ISIC-4	|
+| 2014			| SINCO 2011			| ISCO-08	| SCIAN 2013			| ISIC-4	|
+| 2015			| SINCO 2011			| ISCO-08	| SCIAN 2013			| ISIC-4	|
+| 2016			| SINCO 2011			| ISCO-08	| SCIAN 2013			| ISIC-4	|
+| 2017			| SINCO 2011			| ISCO-08	| SCIAN 2013			| ISIC-4	|
+| 2018			| SINCO 2011			| ISCO-08	| SCIAN 2013			| ISIC-4	|
+| 2019			| SINCO 2011			| ISCO-08	| SCIAN 2019			| ISIC-4	|
+| 2020			| SINCO 2011			| ISCO-08	| SCIAN 2019			| ISIC-4	|
+
+
+Further information or questions about the microdata in this webpage can be directed to [World Bank GLD Focal Point](mailto:gld@worldbank.org).
