--- a/Support/Templates/1. Introduction to [Survey Acronym].md
+++ b/Support/Templates/1. Introduction to [Survey Acronym].md
@@ -1,5 +1,12 @@
 # Introduction to [Full Name of Survey] ([Survey Acronym)]
 
+- [What is the CCC survey?](#what-is-the-ccc-survey-acronym)
+- [What does the CCC survey cover?](#what-does-the-ccc-survey-acronym-cover)
+- [Where can the data be found?](#where-can-the-data-be-found)
+- [What is the sampling procedure?](#what-is-the-sampling-procedure)
+- [What is the significance level?](#what-is-the-geographic-significance-level)
+- [Other noteworthy aspects](#other-noteworthy-aspects)
+
 ## What is the [CCC] [survey Acronym]?
 
 Short introduction to what the survey is, meaning a paragraph of a few lines. Example:
