Update 1. Introduction to EUS.md

--- a/Support/Country Survey Details/IND/EUS/1. Introduction to EUS.md
+++ b/Support/Country Survey Details/IND/EUS/1. Introduction to EUS.md
@@ -55,7 +55,7 @@ The table below shows the difference between published data and the data in the 
 | :------:			| :------:		| :------:			|
 | Sample size – Rural	| 509,778	| 509,779		|
 |Expanded pop – Rural	| 686,881,988	| 686,880,900		|
-|Expanded pop – Rural	| 309,233	| 309,234		|
+|Sample size - Urban	| 309,233	| 309,234		|
 |Expanded pop – Urban	| 234,107,489	| 234,107,000		|
 
 The differences are a single individual in each of the rural and the urban sample, in the hundreds in the case of expanded population - for a country of about a billion people at the time (1999). The harmonization team has tried to identify and correct this difference but failed to locate it. The differences are believed to be too small to impact the validity of any conclusions drawn from the data in a significant way. The inability to match precisely published numbers is nonetheless to note.
