--- a/Support/Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
+++ b/Support/Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
@@ -61,7 +61,7 @@ Text
 
 ### Changes in states over time
 
-Text
+In the intervening years between the last EUS survey in 2011 and the first PLFS the state of Telangana was [formed out of districts previously part of Andhra Pradesh](https://en.wikipedia.org/wiki/Andhra_Pradesh_Reorganisation_Act,_2014). The states codes for the PLFS from 2017 to 2019 are consistent and the coding is equal with the coding used in the EUS from 2004 onwards with the addition of code 36 for Telangana.
 
 ### Definitions of employment over recall periods
 
@@ -73,8 +73,16 @@ Moreover, the PLFS asks employment questions both over the 12-month and the 7-da
 The details of these definitions are [covered separately in another document](Definitions_of_employment_over_recall_periods.md)
 
 ### Definitions of wage information
-The raw data contains three types of wage information on the 7-day recall. There is 
-Text
+
+The seven-day recall section 6 (see screenshot below) has two instances to record earnings. Column 9 of questions 3.1 through 3.7 asks for daily earnings for those with codes 41,42, and 51, while question 9 asks for the preceding month’s earnings for those with codes 31, 71, or 72. Finally, for those with codes 11, 12, 21, 61, and 62, the interviewees are asked to report their gross earnings over the previous 30 days.
+
+![Screenshot of questionnaire](/Support/Country%20Survey%20Details/IND/PLFS/utilities/earnings_questions.PNG)
+
+Code 11 stands for the self-employed, while code 12 represents employers. Codes 61 and 62 represent family helpers in a business. For them we have the earnings for the past 30 days. The monthly wage is only collected for those in wage employment over the past week (code 31) or waged workers off in that week due to sickness (code 71) or other reasons (code 72).
+
+The annual report (see [here the report for the 2019/20 PLFS](/Support/Country%20Survey%20Details/IND/EUS/utilities/Annual_Report_PLFS_2019_20.pdf)) documents these earnings in separate tables. In addition, the daily earnings can be summarized to a weekly wage for casual wage workers in public works other than MGNREG (Mahatma Gandhi National Rural Employment Guarantee Act) (code 41), casual workers in MGNREG works (code 42), or in other types of works.
+
+These wages are reported only as daily wages. It seems safe to summarise this into a weekly wage, but the Indian Authorities do not try to compare the two by for example dividing monthly earnings by 4.3. Hence attention should be given to extracting the correct information from the survey when calculating wages. Annualising casual workers earnings to a month or a year will likely result in an overestimate of their income.
 
 ## Impact of the COVID-19 crisis on the data
 
