--- a/Support/Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
+++ b/Support/Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
@@ -54,7 +54,7 @@ The report on the first PLFS from 2017 compares the sampling methodologies for t
 ### Coding of industry and occupation codes
 
 The PLFS data is coded using NIC-2008 codes for industry and NCO-2004 codes for occupation. NIC-2008 codes are five-digit codes whose first four are equivalent with ISIC-4 and the last one is used, wherever necessary to adapt to the Indian context. Hence no correspondence tables are necessary to translate the information to ISIC-4.
-NCO-2004, on the other hand is not directly linked to the international occupation system ISCO. The harmonization team could not find any correspondence tables on the MOSPI website. Hence the method used was to rely on the correspondence develop by Mses. Saloni Khurana and Kanika Mahajan in their [technical appendix](/Support/Country%20Survey%20Details/IND/EUS/utilities/NCO_concordance.pdf) to their paper [Evolution of wage inequality in India (1983-2017)](/Support/Country%20Survey%20Details/IND/ PLFS/utilities/wp2020-167.pdf). The harmonization team is thankful to them for their research and kindness in sharing their work.
+NCO-2004, on the other hand is not directly linked to the international occupation system ISCO. The harmonization team could not find any correspondence tables on the MOSPI website. Hence the method used was to rely on the correspondence develop by Mses. Saloni Khurana and Kanika Mahajan in their [technical appendix](/Support/Country%20Survey%20Details/IND/PLFS/utilities/NCO_concordance.pdf) to their paper [Evolution of wage inequality in India (1983-2017)](/Support/Country%20Survey%20Details/IND/PLFS/utilities/wp2020-167.pdf). The harmonization team is thankful to them for their research and kindness in sharing their work.
 
 The technical appendix consists of two tables. The first is the concordance between NCO 1968 and NCO 2004. The second details the concordance between NCO 2004 and ISCO-88. The PDF we [convert into an Excel file](/Support/Country%20Survey%20Details/IND/PLFS/utilities/occupation_correspondences.xlsx). [This R code](/Support/Country%20Survey%20Details/IND/PLFS/utilities/convert_occup_concordance_to_dta.R) produces two `dta` files. One for mapping from older NCO versions (necessary for EUS, but not PLFS) and the [India_nco_04_to_isco_88.dta](/Support/Country%20Survey%20Details/IND/PLFS/utilities/India_nco_04_to_isco_88.dta) file used in the harmonization code to convert from NCO 2004 to ISCO-88.
 Text
