Updates: adding links to intermediate dta files

--- a/Support/Country Survey Details/ZAF/QLFS/1. Introduction to QLFS.md
+++ b/Support/Country Survey Details/ZAF/QLFS/1. Introduction to QLFS.md
@@ -157,7 +157,7 @@ The difference between LMDSA and QLFS is that the former compiles data collected
 
 All years except 2020 have both LMDSA and QLFS available on DataFirst, and therefore, we used LMDSA for harmonization because of its simplicity and QLFS for cross-checking purposes. For year 2020, the annual data set was assembled manually by appending four QLFS data sets and dividing `weight` by four.
 
-Year 2012 and 2016 need special attention. Using LMDSA alone for these two years are not enough because they both lose information to some degree. LMDSA 2012 does not contain `Q19ATTE` which is necessary for generating the GLD variable `school`. The solution is to append QLFSs in 2012 and extract `Q19ATTE` and merge it into LMDSA 2012. Similarly, LMDSA 2016 do not have complete information on `Geo_type`. This variable can be obtained from QLFS 2016.
+Year 2012 and 2016 need special attention. Using LMDSA alone for these two years are not enough because they both lose information to some degree. LMDSA 2012 does not contain `Q19ATTE` which is necessary for generating the GLD variable `school`. The solution is to append QLFSs in 2012 and extract `Q19ATTE` and merge it into LMDSA 2012, which produces this intermidiate [dta file](/Support/Country%20Survey%20Details/ZAF/QLFS/utilities/ZAF_2012_QLFS_v01_M_v01_A_GLD_append_Q19ATTE.dta). Similarly, LMDSA 2016 do not have complete information on `Geo_type`. This variable can be obtained from QLFS 2016 and brought into LMDSA 2016 to get the intermidiate [dta file](/Support/Country%20Survey%20Details/ZAF/QLFS/utilities/ZAF_2016_QLFS_v01_M_v01_A_GLD_append_GEO.dta).  
 
 ### Change in implementation
 
