--- a/Support/Country Survey Details/TUR/HLFS/1. Introduction to HLFS.md
+++ b/Support/Country Survey Details/TUR/HLFS/1. Introduction to HLFS.md
@@ -94,6 +94,12 @@ The raw datasets come with ID information masked due to privacy reasons. In the 
 
 TURKSTAT developed the 2000-2013 surveys with a variable for urban, rural categories. However, the 2014-2019 survey do not have a variable for urbanization categories. Further information about this change can be accessed in the press releases from 2014-onwards.
 
+### Education 
+
+The education section of the harmonized dataset was developed using the NSO raw dataset. However, in the harmonization process, the team noted that the education levels changed between 2000 and 2014. The changes in the education system affected the code used in the GLD harmonization process, as a result, the team decided to create a separate page to explain the peculiarities of the education section and the decisions made by the team that resulted in the variables of the harmonized dataset. Please, use the following [link](Support_Country_Survey_Details_TUR_HLFS_education.md) to get more details.
+
 
 ### Other Documentation Files 
-The yearly HLFS has changed methodology since 2020. Though the do files do not cover the 2020 HLFS, users may find useful the basis for the change in methodology. Interested persons can access the information in the following link about the [changes](https://www.tuik.gov.tr/indir/metodolojikDokumanlar/hia_metod_en.pdf). 
+The yearly HLFS has changed methodology since 2020. Though the do files do not cover the 2020 HLFS, users may find useful the basis for the change of methodology. Interested persons can access the information in the following [link](https://www.tuik.gov.tr/indir/metodolojikDokumanlar/hia_metod_en.pdf). 
+
+
