--- a/Support/Country Survey Details/TUR/HLFS/1. Introduction to HLFS.md
+++ b/Support/Country Survey Details/TUR/HLFS/1. Introduction to HLFS.md
@@ -47,7 +47,7 @@ The datasets are not available to the public, the researcher/analyst has to purc
 
 The LFS is designed as a two-stage stratified cluster sampling survey. The sampling frame is based on a nationwide address database with households as the ultimate sampling unit. Note however, that the sampling frame is updated over the years and there are slight changes to the methodology over time. For example, from 2004 the sampling allowed for subnational estimates. For further details please see the Turkish NSO [site](https://www.tuik.gov.tr/).
 
-Note: Information on methodology is only available from 2011 onwards. The presse releases are the best source of documentation of the sampling and weighting processess for each year. These can be accessed through the following [link](https://data.tuik.gov.tr/Kategori/GetKategori?p=istihdam-issizlik-ve-ucret-108&dil=2).
+Note: Information on methodology is only available from 2011 onwards. The presse releases are the best source of documentation of the sampling and weighting processess for each year. These can be accessed through the following [link](https://data.tuik.gov.tr/Kategori/GetKategori?p=istihdam-issizlik-ve-ucret-108&dil=2). In addition, the NSO prepared an overview of the process that is worth [revising](/Support/Country%20Survey%20Details/TUR/HLFS/Utilities/Presentation_TUIK.pdf) to understand the method and surveying process. 
 
 ## What is the geographic significance level?
 
