--- a/Support/Country Survey Details/TUR/HLFS/1. Introduction to HLFS.md
+++ b/Support/Country Survey Details/TUR/HLFS/1. Introduction to HLFS.md
@@ -72,6 +72,14 @@ TURKSTAT developed the 2000-2013 surveys with a variable for urban, rural catego
 
 The education section of the harmonized dataset was developed using the NSO raw dataset. However, in the harmonization process, the team noted that the education levels changed between 2000 and 2014. The changes in the education system affected the code used in the GLD harmonization process, as a result, the team decided to create a separate page to explain the peculiarities of the education section and the decisions made by the team that resulted in the variables of the harmonized dataset. Please, use the following [link](/Support/Country%20Survey%20Details/TUR/HLFS/education.md) to get more details.
 
+### Occupation Classification
+
+The TUR HLFS occupation data followed the coding from the international classification for occupations i.e., isco-68, isco-88 and isco-08. Though variations between years happened, all the changed followed the correspondance to the international coding classification. The harmonization team prepared a separate [page](/Support/Country%20Survey%20Details/TUR/HLFS/correspondance%20ISCO.md) that dives deeper into the changes for the case of Turkey and the resulting limitations to consider while using the harmonized dataset. 
+
+### Industry Classification
+
+The TUR HLFS industry data follow the NACE or the European industry classification starting 2004. Previous to that, the NSO used the ISIC revision 3 to code the industry activities. Further details on the significance of this shift, resulting logic used in the harmonized dataset and the limitation can be found in the following [link](/Support/Country%20Survey%20Details/TUR/HLFS/Correspondance%20ISIC.md). 
+
 ### Other Documentation Files 
 The yearly HLFS has changed methodology since 2020. Though the do files do not cover the 2020 HLFS, users may find useful the basis for the change of methodology. Interested persons can access the information in the following [link](https://www.tuik.gov.tr/indir/metodolojikDokumanlar/hia_metod_en.pdf). 
 
